--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,10 @@
       "48": "icon48.jpeg",
       "16": "icon16.jpeg"
     },
-  
-    "browser_action": {
-      "default_icon": "icon48.jpeg",
-      "default_title": "My Todo List",
-      "default_popup": "popup.html"
-    }
+    "content_scripts": [
+      {
+        "matches": ["*://*.twitch.tv/*"],
+        "js": ["main.js","arrive.js"]
+      }
+    ]
   }
