--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,9 @@
     "content_scripts": [
       {
         "matches": ["*://*.twitch.tv/*"],
-        "js": ["main.js","arrive.js"]
+        "js": ["components.js","main.js"],
+        "css" : ["twitchCategories.css"],
+        "run_at" : "document_end"
       }
     ]
   }
