--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "content_scripts": [
       {
         "matches": ["*://*.twitch.tv/*"],
-        "js": ["components.js","main.js"],
+        "js": ["mustache.min.js","components.js","main.js"],
         "css" : ["twitchCategories.css"],
         "run_at" : "document_end"
       }
